samples/_failures_safe/1761318137_e7ab2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02b8c661.c: In function ‘main’:
./samples/SAFE/__tmp_02b8c661.c:162:16: error: expected declaration or statement at end of input
  162 |                token.column);
      |                ^~~~~
./samples/SAFE/__tmp_02b8c661.c:162:16: error: expected declaration or statement at end of input
